--- a/Template/lec_pre.sty
+++ b/Template/lec_pre.sty
@@ -19,6 +19,8 @@
 \usepackage[]{amssymb} %gives us the character \varnothing
 \usepackage{fancyhdr}
 \usepackage{amsmath}
+\usepackage[hidelinks]{hyperref}
+\usepackage{svg}
 \usepackage{float}
 \usepackage{wasysym} % Used for smileys
 \usepackage{fancyhdr}
